--- a/vignettes/ipaq.Rmd
+++ b/vignettes/ipaq.Rmd
@@ -13,8 +13,8 @@ knitr::opts_chunk$set(
 collapse = TRUE,
 comment = "#>"
 )
-devtools::load_all(".")
-library(dplyr)
+options(rmarkdown.html_vignette.check_title = FALSE)
+
 ```
 
 ## Background
@@ -90,6 +90,9 @@ If you have any `NA` in the time data, you will get a warning about not being ab
 this is expected and wanted behaviour, but you may proceed, the METs will not be calculated where data is missing.
 
 ```{r}
+library(Questionnaires)
+library(dplyr)
+
 dat <- data.frame(
   time_1  = c("02:34", "09:33", "01:14"),
   time_2  = c("00:55", NA, "00:30")
@@ -145,19 +148,19 @@ The function takes an entire data frame with all columns of data necessary to co
 ```{r}
 
 data <- data.frame(
-  IPAQ_1a = c(NA, "No", "Yes", NA, NA, NA, NA, NA, NA, "Yes"), 
-  IPAQ_1b = c(0, NA, 3, 3, 0, 2, 4, 3, 0, 3), 
-  IPAQ_2 = c("00:00", "", "01:00", "01:00", "00:00", "03:30", "01:00", "00:25", "00:00", "00:45"), 
-  IPAQ_3a = c(NA, "Yes", "Yes", NA, NA, NA, NA, NA, NA, "No"), 
-  IPAQ_3b = c(1, 3, 1, 3, 1, 4, 0, 5, 4, NA), 
-  IPAQ_4 = c("00:30", "01:30", "01:00", "01:00", "01:00", "02:00", "00:00", "00:15", "03:00", ""), 
-  IPAQ_5a = c(NA, "Yes", "Yes", NA, NA, NA, NA, NA, NA, "Yes"), 
-  IPAQ_5b = c(7, 3, 7, 7, 3, 3, 0, 5, 7, 4), 
-  IPAQ_6 = c("01:00", "00:20", "01:00", "00:25", "01:30", "00:20", "00:00", "01:15",  "01:00", "00:30"), 
-  IPAQ_7 = c("05:00", "12:00", "05:00", "07:00", "00:18", "05:00", "00:00", "08:00", "04:00", "08:00"), 
-  IPAQ_8a = c(5, NA, NA, 4, 4, 6, 5, 4, 6, NA),
-  IPAQ_8b = c(5, NA, NA, 4, NA, 6, 5, 4, 6, NA), 
-  IPAQ_8c = c(5, NA, NA, 5, 3, 5, 5, 3, 6, NA)
+  ipaq_1a = c(NA, "No", "Yes", NA, NA, NA, NA, NA, NA, "Yes"), 
+  ipaq_1b = c(0, NA, 3, 3, 0, 2, 4, 3, 0, 3), 
+  ipaq_2 = c("00:00", "", "01:00", "01:00", "00:00", "03:30", "01:00", "00:25", "00:00", "00:45"), 
+  ipaq_3a = c(NA, "Yes", "Yes", NA, NA, NA, NA, NA, NA, "No"), 
+  ipaq_3b = c(1, 3, 1, 3, 1, 4, 0, 5, 4, NA), 
+  ipaq_4 = c("00:30", "01:30", "01:00", "01:00", "01:00", "02:00", "00:00", "00:15", "03:00", ""), 
+  ipaq_5a = c(NA, "Yes", "Yes", NA, NA, NA, NA, NA, NA, "Yes"), 
+  ipaq_5b = c(7, 3, 7, 7, 3, 3, 0, 5, 7, 4), 
+  ipaq_6 = c("01:00", "00:20", "01:00", "00:25", "01:30", "00:20", "00:00", "01:15",  "01:00", "00:30"), 
+  ipaq_7 = c("05:00", "12:00", "05:00", "07:00", "00:18", "05:00", "00:00", "08:00", "04:00", "08:00"), 
+  ipaq_8a = c(5, NA, NA, 4, 4, 6, 5, 4, 6, NA),
+  ipaq_8b = c(5, NA, NA, 4, NA, 6, 5, 4, 6, NA), 
+  ipaq_8c = c(5, NA, NA, 5, 3, 5, 5, 3, 6, NA)
 )
 
 data
