ignore name diff in vignette

--- a/vignettes/tci.Rmd
+++ b/vignettes/tci.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-devtools::load_all(".")
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 # Background
