--- a/vignettes/ricwt.Rmd
+++ b/vignettes/ricwt.Rmd
@@ -7,6 +7,10 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r}
+options(rmarkdown.html_vignette.check_title = FALSE)
+
+```
 
 # Background
 _directly from the paper_
