--- a/vignettes/ipaq.Rmd
+++ b/vignettes/ipaq.Rmd
@@ -14,12 +14,16 @@ collapse = TRUE,
 comment = "#>"
 )
 options(rmarkdown.html_vignette.check_title = FALSE)
-
+frag_path <- here::here("man", "fragments", "gds")
+paths <- list.files(frag_path, "Rmd", full.names = TRUE)
+names(paths) <- gsub("\\.Rmd", "", basename(paths))
+paths <- as.list(paths)
 ```
 
 ## Background
 
-The purpose of the International Physical Activity Questionnaires (IPAQ) is to provide a set of well-developed instruments that can be used internationally to obtain comparable estimates of physical activity. There are two versions of the questionnaire. The short version is suitable for use in national and regional surveillance systems and the long version provide more detailed information often required in research work or for evaluation purposes.
+```{r child=paths$background, eval = TRUE} 
+```
 
 ## Rationale
 
@@ -28,54 +32,8 @@ The public health burden of a sedentary lifestyle has been recognized globally, 
 In response to the global demand for comparable and valid measures of physical activity within and between countries, IPAQ was developed for surveillance activities and to guide policy development related to health-enhancing physical activity across various life domains.
 
 ## Scoring
-
-Scoring of the IPAQ is based on a metric called METs, which are multiples of the resting metabolic rate.
-[The IPAQ scoring description can be found here ](https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnx0aGVpcGFxfGd4OjE0NDgxMDk3NDU1YWRlZTM)
-
-
-### Continuous Score
-
-Expressed as MET-min per week: MET level x minutes of activity/day x days per week
-
-MET levels:
-
-* **Light** - 3.3 METs
-
-* **Moderate** - 4.0 METs
-
-* **Vigorous** - 8.0 METs
-
-Total MET-minutes/week = Light (3.3 x min x days) + Mod (4.0 x min x days) + Vig (8.0 x min x days)
-
-
-### Categorical Score
-
-Three levels (categories) of physical activity are proposed:
-
-#### Category 1: Low
-
-This is the lowest level of physical activity. Those individuals who not meet criteria for categories 2 or 3 are considered low/inactive. 
-
-#### Category 2: Moderate
-
-Any one of the following 3 criteria:
-
-* 3 or more days of vigorous activity of at least 20 minutes per day **OR**
-
-* 5 or more days of moderate-intensity activity or walking of at least 30 minutes per day **OR**
-
-* 5 or more days of any combination of walking, moderate-intensity or vigorous intensity activities achieving a minimum of at least 600 MET-min/week. 
-
-
-#### Category 3: High
-
-Any one of the following 2 criteria:
-
-* Vigorous-intensity activity on at least 3 days and accumulating at least 1500 MET-minutes/
-week **OR**
-
-* 7 or more days of any combination of walking, moderate-intensity or vigorous
-intensity activities achieving a minimum of at least 3000 MET-minutes/week 
+```{r child=paths$scoring, eval = TRUE} 
+```
 
 ## Using the `ipaq` functions
 
@@ -90,7 +48,7 @@ If you have any `NA` in the time data, you will get a warning about not being ab
 this is expected and wanted behaviour, but you may proceed, the METs will not be calculated where data is missing.
 
 ```{r}
-library(Questionnaires)
+library(questionnaires)
 library(dplyr)
 
 dat <- data.frame(
@@ -140,8 +98,6 @@ ipaq_compute_sum(vigurous , moderate, light)
 Finally, you can calculate everything in one go using the `ipaq_compute` function.
 This function has many arguments, as the minutes and days of each category (2x3) must
 be specified, and also the mets you want applied must be supplied.
-By default, if you have MOAS-like data you need not do any extra specifications to make this work,
-the MOAS columns necessary are specified as defaults.
 The easiest way to alter the default mets is by using the `ipaq_mets` function to alter them.
 The function takes an entire data frame with all columns of data necessary to compute the MET score.
 
@@ -173,15 +129,5 @@ data %>%
 
 
 ## References
-
-Ainsworth, B. E., et al. (2000). "Comparison of three methods for measuring the time spent in physical activity." [*Med Sci Sports Exerc* 32: S457-64](https://www.ncbi.nlm.nih.gov/pubmed/10993415)
-
-Ainsworth, B. E., et al. (2006). "Comparison of the 2001 BRFSS and the IPAQ Physical Activity Questionnaires." [*Med Sci Sports Exerc* 38: 1584-92](https://www.ncbi.nlm.nih.gov/pubmed/16960519)
-
-Brown, W. J., S. G. Trost, A. Bauman, K. Mummery and N. Owen (2004). "Test-retest reliability of four physical activity measures used in population surveys." [*J Sci Med Sport* 7: 205-15](https://www.ncbi.nlm.nih.gov/pubmed/15362316)
-
-Hallal, P. C. and C. G. Victora (2004). "Reliability and validity of the International Physical Activity Questionnaire (IPAQ)." [*Med Sci Sports Exerc* 36: 556](https://www.ncbi.nlm.nih.gov/pubmed/15076800)
-
-Mader, U., B. W. Martin, Y. Schutz and B. Marti (2006). "Validity of four short physical activity questionnaires in middle-aged persons." [*Med Sci Sports Exerc* 38: 1255-66](https://www.ncbi.nlm.nih.gov/pubmed/16826022)
-
-
+```{r child=paths$scoring, eval = TRUE} 
+```
