--- a/man/fragments/ehi/equation.Rmd
+++ b/man/fragments/ehi/equation.Rmd
@@ -1,15 +1,15 @@
-<!-- ```{r, include=FALSE} -->
-<!-- equation <- "\\frac{\\Sigma(|positive|)-\\Sigma(|negative|)}{\\Sigma(|positive|)+\\Sigma(|negative|)}x100" -->
-<!-- html <- knitr::is_html_output() -->
-<!-- rd <- !html -->
-<!-- ``` -->
-<!--  -->
-<!-- ```{r, include=html} -->
-<!-- katex::katex_html(equation) -->
-<!-- ``` -->
+```{r, include=FALSE}
+equation <- "\\frac{\\Sigma(|positive|)-\\Sigma(|negative|)}{\\Sigma(|positive|)+\\Sigma(|negative|)}x100"
+html <- knitr::is_html_output()
+rd <- !html
+```
 
-<!-- ```{r, include=rd, results='asis'} -->
-<!-- eval(parse(text=sprintf("\\Sexpr[results=rd, stage=build]{katex::math_to_rd('%s')}", equation))) -->
-<!-- ``` -->
+```{r, include=html}
+katex::katex_html(equation)
+```
+
+```{r, include=rd, results='asis'}
+katex::math_to_rd(equation)
+```
 
 
